# DigitalSmith

./: Dockerfile  Makefile  README.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  utils.py
Cogs/: RoleHandler.py  VoiceChannelLogHander.py  test.py
common/: const.py  roles.py
src/: app.ts
src/components/embed/: index.ts  join.ts  leave.ts
src/constants/id/: channel.ts
src/hooks/: index.ts
src/hooks/logger/: index.ts  logger.ts  voiceLogger.ts
src/types/: embed.ts
utils/: __init__.py  channel.py  role.py
